public/designs/themes/base/style.css
/* ==> button.css <== */

.button {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
}

#content input.button, #content a.button {
  background-repeat: no-repeat;
  background-color: #EEE;
  border: 1px solid #CCC;
  color: #555;
  line-height: 16px;
  height: 16px;
  text-decoration: none;
}

#content input.button.with-text, #content a.button.with-text {
  line-height: 20px;
  height: 20px;
}

input.button {
  max-height: 20px;
}
input.button.with-text {
  max-height: 22px;
}

#content input.button:hover, #content a.button:hover {
  color: #FFF;
  background-color: #555;
  border: 1px solid #2e3436;
  text-decoration: none;
}

/* ==> layout.css <== */

body {
  background: #EEE;
  font-family: Liberation Sans, Arial, sans-serif;
}

#wrap-1, #theme-footer {
  width: 960px;
  margin: auto;
}

body, th, td, input {
  font-size: 12px;
}

#link-go-content {
  position: absolute;
  top: -100px;
}

#wrap-2 {
  padding: 10px;
  position: relative;
  border: 1px solid #d3d7cf;
  background-color: white;
}

.msie7 #wrap-2 {
  height: 100%;
}

#content {
  margin-top: 105px;
}

/*************************** user bar ********************************/

#user {
  text-align: right;
  position: absolute;
  right: 10px;
  z-index: 10;
}

#user a {
  position: relative;
  color: #888a85;
}

#user a strong {
  font-weight: bold;
  color: #555753;
}

#user .logged-in > * {
  margin-left: 25px;
}

#user a i {
  display: block;
  width: 16px;
  height: 16px;
  position: absolute;
  left: -17px;
  top: -1px;
}
.msie7 #user a i {
  top: 3px;
}

#user #homepage-link i {
  width: 18px;
  height: 18px;
  left: -20px;
  top: -2px;
  background-position: 50% 50%;
}

#user form {
  position: relative;
  display: inline;
  margin-left: 20px;
}

#user form input .blur {
  width: 160px;
  border: 1px solid #BBB;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  color: #CCC;
}
#user form input {
  border: 1px solid #888;
  color: #555;
}

#user form div {
  font-size: 11px;
  color: #888;
  visibility: hidden;
}
#user form.focused div {
  visibility: visible;
}

/*************************** logo ************************************/

#site-title {
  margin: 0px;
  padding: 0px;
  position: absolute;
  top: 20px;
  left: 0px;
  z-index: 7;
  overflow: hidden;
  width: 310px;
  height: 90px;
}

#site-title a {
  display: block;
  width: 300px;
  height: 40px;
  position: absolute;
  top: 30px;
  left: 20px;
}

#site-title span {
  font-size: 1px;
  position: absolute;
  top: -200px;
}

/************************** navigation bar ***************************/

#navigation {
  position: absolute;
  top: 49px;
  right: 0px;
  width: 100%;
  text-align: right;
  background: #ccc url(imgs/menu-top-bg-left.png) no-repeat;
}

#navigation-end {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 14px;
  height: 42px;
  background: url(imgs/menu-top-bg-right.png);
}

#navigation ul {
  height: 42px;
  margin: 0px;
  padding: 0px 10px 0px 0px;
  float: right;
}

#navigation li {
  list-style: none;
  display: block;
  height: auto;
  width: 125px;
  float: left;
  text-align: center;
  position: relative;
}

#navigation a {
  border-left: 1px solid #888a85;
  display: block;
  font-size: 15px;
  line-height: 42px;
  text-decoration: none;
  color: #000;
}
#navigation a:hover {
  background: url(imgs/menu-top-hilight.png);
  color: #FFF;
}

#navigation span {
  padding: 0px 0px 0px 30px;
  background-position: 5px 50%;
  background-repeat: no-repeat;
}

#navigation .menu-submenu ul, #navigation .menu-submenu li{
  float: none;
  text-align: right;
  border-left: 0px;
}

#navigation .menu-submenu ul{
  border: 1px solid #888a85;
  border-top: 0px;
  background-color: #ccc;
  padding-right: 2px;
  height: auto;
  display: block;
  padding-top: 20px;
}

#navigation .menu-submenu{
  bottom: -75px;
  width: 126px;
  top: 0px;
  right: 0px;
  position: relative;
}

#navigation .menu-submenu a{
  padding: 4px 5px;
  font-size: 12px;
  line-height: normal;
  border-left: 0;
}

#navigation .menu-submenu-trigger {
  background: #eee url(../../../images/down-arrow.png) center center no-repeat;
  border: 0px;
  height: 8px;
  width: 124px;
}
#navigation li:hover .menu-submenu-trigger:hover {
  background: #585858 url(imgs/down-arrow-light.png) center center no-repeat;
}

#navigation li:hover .menu-submenu-trigger{
  display: block;
}

#navigation li .menu-submenu-trigger{
  display: none;
  height: 16px;
  top: 42px;
  left: 0;
  border: 1px solid #888A85;
  outline: none;
}

#navigation .menu-submenu-header, #navigation .menu-submenu-footer, #navigation .menu-submenu h4{
  display: none;
}

#navigation .common-profile-list-block .vcard .menu-submenu-trigger,
.menu-submenu-trigger {
  left: 1px;
  top: 33px;
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
}

/************************** main content *****************************/

.main-content {
  border-style: solid;
  border-color: #babdb6;
  border-width: 1px;
  border-radius: 10px;

  box-shadow: 1px 1px 2px #888888;

  padding: 10px 20px;
}

#content .main-block h1, #not-found h1, #access-denied h1 {
  font-variant: small-caps;
  color: #555753;
  text-align: left;
  border-bottom: 2px solid #2e3436;
}

.block {
  position: relative;
  padding: 10px 0;
  float: none;
}

/***************************** header ********************************/
#theme-header {
  height: 20px;
}

/***************************** footer ********************************/

#theme-footer #language-chooser {
  margin-top: 3em;
  text-align: center;
}


#theme-footer {
  padding: 0px;
  font-size: 11px;
  color: #555;
  margin-bottom: 20px;
}

#theme-footer a {
  color: #333;
  text-decoration: none;
}
#theme-footer a:hover {
  color: #222;
  text-decoration: underline;
}

#footer-links {
  text-align: left;
  float: left;
}

#link-to-doc {
 background-repeat: no-repeat;
 padding-left: 20px;
 padding-top: 2px;
 padding-bottom: 2px;
}

#copyright {
  text-align: right;
}
/* ... */

